# Proyecto-Fundamentos-de-Robotica

./: .gitignore  README.md
proyecto/src/: control_pdg  prfuncs.py  test_diffkine  test_diffkine_pose  test_fkine  test_gazebo  test_ikine  validacion
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: config.rviz  robot_control.yaml
robot_description/launch/: robot_gazebo.launch  robot_gazebo_control.launch  robot_gazebo_control_effort.launch  rviz.launch
robot_description/urdf/: robot.urdf  robot_description.urdf
robot_description/worlds/: gazebo4.world
