<?xml version="1.0"?>
<package format="2">
  <name>robot_description</name>
  <version>0.0.1</version>
  <description>URDF and launch files for robot description</description>

  <maintainer email="jose.gil@utec.edu.pe">Jose Pablo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>rviz</depend>

  <export></export>
</package>